--- a/frontend/static/dashboard.css
+++ b/frontend/static/dashboard.css
@@ -220,7 +220,6 @@ body {
     display: flex;
     flex-direction: column;
     padding: 10px 30px;
-    /* margin-top: 10px; */
 }
 
 .action-button {
@@ -286,21 +285,39 @@ body {
 }
 
 .contact-list {
-    /* overflow-y: auto; */
-    /* max-height: calc(100vh - 420px); */
+    overflow-y: auto;
+    max-height: calc(100vh - 420px);
     padding: 10px 30px;
     display: flex;
     flex-direction: column;
+}
+
+.contacts-list::-webkit-scrollbar {
+    width: 6px;
+    /* Тоньше полоса прокрутки */
+}
+
+.contacts-list::-webkit-scrollbar-track {
+    background: transparent;
+    /* Прозрачный фон */
+}
+
+.contacts-list::-webkit-scrollbar-thumb {
+    background: rgba(212, 214, 201, 0.5);
+    /* Полупрозрачная полоса прокрутки */
+    border-radius: 3px;
+    /* Меньше скругление для стиля мессенджера */
+}
+
+.contacts-list::-webkit-scrollbar-thumb:hover {
+    background: rgba(212, 214, 201, 0.8);
+    /* Немного ярче при наведении */
 }
 
 .contact-item {
     display: flex;
     align-items: center;
     padding: 8px 14px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    width: 100%;
     background-color: transparent;
     color: white;
     border: 2px solid transparent;
@@ -394,6 +411,38 @@ body {
     text-overflow: ellipsis;
 }
 
+.chat-area {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.chat-area-con {
+    background-image: url('/static/resourses/background.png');
+    background-position: right center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    flex: 1;
+}
+
+/* Центрируем текст CHATSAPP на фоне */
+.chat-area-con::before {
+    content: "CHATSAPP";
+    position: absolute;
+    top: 45%;
+    left: 65%;
+    transform: translate(-50%, -50%);
+    font-size: 5rem;
+    /* Размер шрифта */
+    font-weight: bold;
+    /* Жирное начертание */
+    color: white;
+    /* Белый цвет текста */
+    z-index: 1;
+    /* Убедимся, что текст поверх фона */
+}
+
 /* Chat Area */
 .chat-list {
     flex: 1;
@@ -479,44 +528,6 @@ body {
     margin-left: 4px;
 }
 
-/* Chat Area */
-.chat-area {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-}
-
-/* Фон для правой части страницы */
-.chat-area-con {
-    background-image: url('/static/resourses/background.png');
-    background-position: right center;
-    /* Позиционируем изображение справа */
-    background-repeat: no-repeat;
-    /* Убираем повторение фона */
-    background-size: cover;
-    /* Подгоняем размер фона под контейнер */
-    flex: 1;
-    /* Чтобы контейнер заполнял пространство */
-}
-
-/* Центрируем текст CHATSAPP на фоне */
-.chat-area-con::before {
-    content: "CHATSAPP";
-    position: absolute;
-    top: 45%;
-    left: 65%;
-    transform: translate(-50%, -50%);
-    font-size: 5rem;
-    /* Размер шрифта */
-    font-weight: bold;
-    /* Жирное начертание */
-    color: white;
-    /* Белый цвет текста */
-    z-index: 1;
-    /* Убедимся, что текст поверх фона */
-}
-
 .chat-header {
     background-color: #386158;
     padding: 12px 16px;
@@ -550,6 +561,8 @@ body {
 }
 
 .message-list {
+    scrollbar-width: thin;
+    scrollbar-color: transparent;
     flex: 1;
     overflow-y: auto;
     padding: 20px;
@@ -558,6 +571,8 @@ body {
     display: flex;
     flex-direction: column;
     background-color: #05604f;
+    height: calc(100vh - 140px);
+    /* Adjust this value based on the height of other elements */
 }
 
 .message-date {
@@ -596,11 +611,6 @@ body {
 }
 
 .message-input-area {
-    /* padding: 10px 16px;
-    background-color: #386158;
-    display: flex;
-    align-items: center;
-    gap: 10px; */
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -617,29 +627,6 @@ body {
     align-items: center;
     padding: 8px 50px;
 }
-
-/* .message-input {
-    flex: 1;
-    display: flex;
-    align-items: center;
-    background-color: #ffffff;
-    border-radius: 20px;
-} */
-
-/* .message-input i {
-    cursor: pointer;
-    font-size: 24px;
-}
-
-.message-input input {
-    background-color: #488376;
-    width: 100%;
-    padding: 10px 15px;
-    border-radius: 8px;
-    border: none;
-    outline: none;
-    font-size: 15px;
-} */
 
 .message-input input {
     flex: 1;
@@ -693,9 +680,6 @@ body {
 .actions i {
     font-size: 25px;
     color: white;
-    /* background-color: #488376; */
-    /* padding: 10px; */
-    /* border-radius: 50%; */
     cursor: pointer;
     display: none;
 }
